<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tv_main_welcome"
        android:layout_width="325dp"
        android:layout_height="40dp"
        android:layout_marginTop="95dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tv_main_input_pw"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_pw"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_pw" />

    <EditText
        android:id="@+id/tv_main_input_id"
        android:layout_width="315dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_id"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_id" />

    <TextView
        android:id="@+id/tv_main_id"
        android:layout_width="89dp"
        android:layout_height="23dp"
        android:layout_marginTop="72dp"
        android:text="@string/ID"
        app:layout_constraintStart_toStartOf="@id/tv_main_input_id"
        app:layout_constraintTop_toBottomOf="@id/tv_main_welcome" />

    <TextView
        android:id="@+id/tv_main_pw"
        android:layout_width="116dp"
        android:layout_height="16dp"
        android:layout_marginTop="76dp"
        android:text="@string/PW"
        app:layout_constraintStart_toStartOf="@id/tv_main_input_pw"
        app:layout_constraintTop_toBottomOf="@id/tv_main_input_id" />

    <Button
        android:id="@+id/tv_main_login"
        android:layout_width="326dp"
        android:layout_height="57dp"
        android:layout_marginTop="140dp"
        android:text="@string/go_to_login"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_input_pw" />

    <Button
        android:id="@+id/tv_main_sign_up"
        style="?android:borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_login" />

</androidx.constraintlayout.widget.ConstraintLayout>